--- a/index.html
+++ b/index.html
@@ -50,25 +50,25 @@
         <p class="modal__title">New Place</p>
         <form class="modal__form">
           <label class="modal__label">
-          <input
-            type="text"
-            name="title"
-            id="profile-title-input_title"
-            class="modal__input"
-            placeholder="Title"
-          />
-          <span class="modal__error" id="image-title-error"></span>
-        </label>
+            <input
+              type="text"
+              name="title"
+              id="profile-title-input_title"
+              class="modal__input"
+              placeholder="Title"
+            />
+            <span class="modal__error" id="image-title-error"></span>
+          </label>
           <label class="modal__label">
-          <input
-            class="modal__input"
-            type="text"
-            id="profile-discription-input_url"
-            name="url"
-            placeholder="Image URL"
-          />
-          <span class="modal__error" id="image-url-error"></span>
-        </label>
+            <input
+              class="modal__input"
+              type="text"
+              id="profile-discription-input_url"
+              name="url"
+              placeholder="Image URL"
+            />
+            <span class="modal__error" id="image-url-error"></span>
+          </label>
           <button class="modal__button" type="submit">Create</button>
         </form>
       </div>
@@ -84,31 +84,31 @@
         ></button>
         <p class="modal__title">Edit Profile</p>
         <form class="modal__form">
-          <label class="modal__label"></label>
-          <input
-            type="text"
-            name="title"
-            id="profile-title-input"
-            class="modal__input"
-            placeholder="Name"
-            minlength="2"
-            maxlength="40"
-            required
-          />
-        </label>
+          <label class="modal__label">
+            <input
+              type="text"
+              name="title"
+              id="profile-title-input"
+              class="modal__input"
+              placeholder="Name"
+              minlength="2"
+              maxlength="40"
+              required
+            />
+          </label>
           <span class="modal__error" id="owners-name-error"></span>
           <label class="modal__label">
-          <input
-            class="modal__input"
-            type="text"
-            id="profile-discription-input"
-            name="description"
-            placeholder="Description"
-            minlength="2"
-            maxlength="200"
-            required
-          />
-        </label>
+            <input
+              class="modal__input"
+              type="text"
+              id="profile-discription-input"
+              name="description"
+              placeholder="Description"
+              minlength="2"
+              maxlength="200"
+              required
+            />
+          </label>
           <span class="modal__error" id="owners-description-error"></span>
           <button class="modal__button" type="submit">Save</button>
         </form>
