fixed min and max

--- a/index.html
+++ b/index.html
@@ -56,6 +56,9 @@
               id="profile-title-input_title"
               class="modal__input"
               placeholder="Title"
+              minlength="1"
+              maxlength="30"
+              required
             />
             <span class="modal__error" id="image-title-error"></span>
           </label>
@@ -66,6 +69,7 @@
               id="profile-discription-input_url"
               name="url"
               placeholder="Image URL"
+              required
             />
             <span class="modal__error" id="image-url-error"></span>
           </label>
