--- a/index.html
+++ b/index.html
@@ -60,7 +60,10 @@
               maxlength="30"
               required
             />
-            <span class="modal__error" id="image-title-error"></span>
+            <span
+              class="modal__error"
+              id="profile-title-input_title-error"
+            ></span>
           </label>
           <label class="modal__label">
             <input
@@ -71,7 +74,10 @@
               placeholder="Image URL"
               required
             />
-            <span class="modal__error" id="image-url-error"></span>
+            <span
+              class="modal__error"
+              id="profile-discription-input_url-error"
+            ></span>
           </label>
           <button class="modal__button" type="submit">Create</button>
         </form>
