updating span errors

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
               required
             />
           </label>
-          <span class="modal__error" id="owners-name-error"></span>
+          <span class="modal__error" id="profile-title-input-error"></span>
           <label class="modal__label">
             <input
               class="modal__input"
@@ -119,7 +119,10 @@
               required
             />
           </label>
-          <span class="modal__error" id="owners-description-error"></span>
+          <span
+            class="modal__error"
+            id="profile-discription-input-error"
+          ></span>
           <button class="modal__button" type="submit">Save</button>
         </form>
       </div>
