--- a/index.html
+++ b/index.html
@@ -146,8 +146,7 @@
     </div>
 
     <!--Index.js-->
-    <script defer src="./scripts/index.js"></script>
-    <script defer src="./scripts/validation.js"></script>
+    <script defer src="./pages/index.js" type="module"></script>
 
     <template id="card-template">
       <li class="card">
