--- a/index.html
+++ b/index.html
@@ -117,11 +117,7 @@
             />
             <span class="modal__error" id="add-url-input-error"></span>
           </label>
-          <button
-            type="submit"
-            class="modal__button modal__button_disabled"
-            disabled
-          >
+          <button type="submit" class="modal__button modal__button_disabled">
             Save
           </button>
         </form>
@@ -152,6 +148,6 @@
       </li>
     </template>
 
-    <script src="./scripts/index.js" type="module" defer></script>
+    <script src="./pages/index.js" type="module" defer></script>
   </body>
 </html>
