--- a/index.html
+++ b/index.html
@@ -73,10 +73,7 @@
               maxlength="200"
               required
             />
-            <span
-              class="modal__error"
-              id="profile-discription-input-error"
-            ></span>
+            <span class="modal__error" id="profile-text-input-error"></span>
           </label>
           <button type="submit" class="modal__button">Save</button>
         </form>
