--- a/src/index.html
+++ b/src/index.html
@@ -128,7 +128,7 @@
           class="modal__close_preview modal__close"
           id="preview-modal-close"
         ></button>
-        <img src="" alt="card image" class="preview-image" />
+        <img src="#" alt="card image" class="preview-image" />
         <p class="modal__preview-text"></p>
       </div>
     </div>
@@ -136,7 +136,7 @@
     <template class="card-template" id="card-template">
       <li class="card">
         <button class="card__delete-button" type="button"></button>
-        <img src="" alt="" class="card__image" />
+        <img src="#" alt="" class="card__image" />
         <div class="card__description">
           <h2 class="card__title"></h2>
           <button class="card__like-button" type="button"></button>
