--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
         />
       </header>
       <main class="content">
-        <section class="profile">
+        <section class="profile page__section">
           <img
             src="<%=require('./images/jacques-cousteau.jpg')%>"
             alt="jacques Cousteau"
@@ -46,12 +46,12 @@
           class="modal__close"
           id="profile-modal-close"
         ></button>
-        <h2 class="modal__title">Edit Profile</h2>
+        <h2 class="modal__heading">Edit Profile</h2>
         <form class="modal__form" id="edit-form">
           <label class="modal__label">
             <input
               type="text"
-              name="title"
+              name="name"
               class="modal__input"
               id="profile-title-input"
               placeholder="Name"
@@ -64,7 +64,7 @@
           <label class="modal__label">
             <input
               type="text"
-              name="description"
+              name="about"
               class="modal__input"
               id="profile-text-input"
               placeholder="Description"
@@ -87,12 +87,12 @@
           class="modal__close"
           id="add-modal-close"
         ></button>
-        <h2 class="modal__title">New place</h2>
+        <h2 class="modal__heading">New place</h2>
         <form class="modal__form" id="add-form">
           <label class="modal__label">
             <input
               type="text"
-              name="title"
+              name="name"
               class="modal__input"
               id="add-title-input"
               placeholder="Title"
@@ -105,7 +105,7 @@
           <label class="modal__label">
             <input
               type="url"
-              name="text"
+              name="link"
               class="modal__input"
               id="add-url-input"
               placeholder="Image URL"
@@ -113,7 +113,11 @@
             />
             <span class="modal__error" id="add-url-input-error"></span>
           </label>
-          <button type="submit" class="modal__button modal__button_disabled">
+          <button
+            type="submit"
+            class="modal__button modal__button_disabled"
+            disabled
+          >
             Save
           </button>
         </form>
