--- a/src/index.html
+++ b/src/index.html
@@ -38,6 +38,21 @@
       </footer>
     </div>
 
+    <!-- Delete card popup -->
+    <div class="modal" id="delete-card-popup">
+      <div class="modal__container modal__container_delete">
+        <button
+          class="modal__close"
+          id="delete-card-close-button"
+          type="button"
+        ></button>
+        <form class="modal__form">
+          <h3 class="modal__heading">Are you sure?</h3>
+          <button class="modal__button" type="submit">Yes</button>
+        </form>
+      </div>
+    </div>
+
     <!-- Edit Modal -->
     <div class="modal" id="edit-modal">
       <div class="modal__container">
